added image and css

--- a/dev/template/dev/index.html
+++ b/dev/template/dev/index.html
@@ -1,5 +1,5 @@
+{% load static %}
 <!DOCTYPE html>
-
 <html>
     <head>
         <meta charset="utf-8">
@@ -7,11 +7,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="{% static 'dev/index.css' %}">
     </head>
     <body>
   <h1>home page</h1>
 
   <h2>yepdi yo deploye pannitan </h2>
+  <img width="300px" height="300px"  src="{% static 'dev/sameer.jpg' %}">
         
     </body>
 </html>
